@@ -9,3 +9,12 @@ Windows 7, git-annex version 5.20131230-g192d991
 
 ### Please provide any additional information below.
 I have no daemon.log, and the console log isn't particularly detailed today; it had just created an ssh key and shown it's fingerprint.
+
+> Ok, I guess this is ssh refusing to use a file that has a group
+> write bit set (when the owner is not the only member of its group),
+> or perhaps that has the world write bit set.
+>
+> I have made the assistant unset those modes when creating and modifying
+> ssh config files. Hopefully that is enough for Windows too.. I can't
+> really test it there, but am calling this provisionally [[done]].
+> --[[Joey]]
